# moroccan-real-estate

./: .gitattributes  .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml  scrapy.cfg
.github/workflows/: ci.yml
data/: avito.json  sample.json  yakeey.json
data/avito/: 2024-10-12_avito.json
data/clean/avito/2024-10-12_avito/: part-00000-02620051-ebe2-4232-aa22-1232544f8071-c000.json  part-00000-ec8715a9-d970-43c4-9acf-34d3d519842c-c000.csv
data/clean/avito/2024-11-30T14-44-37+00-00/: part-00000-a6915517-819f-4674-a66d-df578deb4ef8-c000.csv
data/clean/avito/2024-11-30T19-40-08+00-00/: part-00000-39b01b3c-97a4-4bb6-ab7f-126d272f899c-c000.csv
data/clean/avito/2024-12-18T17-10-16+00-00/: part-00000-012ffe49-5460-42d8-b165-cec9b0278383-c000.csv
data/clean/avito/avito_2024-11-14/: part-00000-31df9b63-1454-48d6-8bf4-20cb34de3625-c000.csv  part-00000-c5ec7435-1b09-464e-b4eb-4c5fee81b8d5-c000.csv
data/clean/yakeey/2024-11-11_yakeey/: part-00000-267d5171-b92a-4cdb-8047-f4d12f546e6b-c000.csv  part-00000-8e6df701-2975-4b8e-b32e-0e04c70123f5-c000.json
data/clean/yakeey/2024-11-30T19-32-14+00-00/: part-00000-9fd4c64e-b309-42cd-9171-109bb173228f-c000.csv
data/clean/yakeey/2024-11-30T19-39-41+00-00/: part-00000-b9cf4e76-8f31-45d0-a47d-b6a59fdd750e-c000.csv
data/clean/yakeey/2024-12-17T20-22-06+00-00/: part-00000-32c88f0a-34d3-4770-8f75-dd7124e82314-c000.csv
data/clean/yakeey/yakeey_2024-11-14/: part-00000-da053eb4-d1dd-42e1-bc71-f47c78c62e09-c000.csv
data/dw/: backup_datawarehouse.db  datawarehouse.db
data/raw/avito/: 2024-11-30T14-44-37+00-00.json  2024-11-30T19-40-08+00-00.json  2024-11-30T20-20-36+00-00.json  2024-12-18T17-10-16+00-00.json  avito_2024-11-14.json  avito_2024-11-28.json
data/raw/yakeey/: 2024-11-11_yakeey.json  2024-11-30T19-32-14+00-00.json  2024-11-30T19-39-41+00-00.json  2024-11-30T20-21-40+00-00.json  yakeey_2024-11-14.json  yakeey_2024-11-28.json  yakeey_dummy.json
data/yakeey/: 2024-10-12_yakeey.json
docs/: conf.py  index.rst  usage_guide.rst
frontend/: Dashboard.py  config.py
frontend/pages/: Model.py
notebooks/: avito.ipynb  yakeey.ipynb
requirements/: dev-requirements.txt  doc-requirements.txt  format-requirements.txt  test-requirements.txt  typing-requirements.txt
scraping/: README.md  items.py  scrapy.cfg  settings.py
scraping/scraping/spiders/: avito.py
scraping/spiders/: avito.py
src/: example_1.py
src/airflow_workflow/: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
src/airflow_workflow/dags/: populate_datawarehouse.py
src/db/: dw_schema.py
src/jobs/: cleaning_avito.py  cleaning_yakeey.py  constraints.py  loading.py  utils.py
src/scraping/: README.md  items.py  pipelines.py  settings.py
src/scraping/spiders/: avito.py  yakeey.py
tests/: conftest.py
tests/scraping/: conftest.py  test_avito.py
tests/scraping/cassettes/: test_get_announcement_urls.yaml
tests/unit/: conftest.py  test_example.py
tests/unit/airflow_workflow/dags/: test_populate_datawarehouse.py
tests/unit/data/dw/: test_datawarehouse.db
tests/unit/data/raw/avito/: 2024-11-30T14-44-37+00-00.json  avito_2024-11-14.json
tests/unit/data/raw/yakeey/: yakeey_2024-11-14.json
tests/unit/db/: test_dw_schema.py
tests/unit/jobs/: test_cleaning_avito.py  test_cleaning_yakeey.py  test_loading.py
tests/unit/scraping/: conftest_scraping.py  scraping_conftest.py  test_avito.py  test_yakeey.py  var_avito.py  var_yakeey.py
tests/unit/scraping/cassettes/: test_is_announcement_valid.yaml
tests/unit/scraping/cassettes/avito/: test_get_attributes[0].yaml  test_get_attributes[1].yaml  test_get_attributes[3].yaml  test_get_attributes[4].yaml  test_get_attributes[5].yaml  test_get_attributes[6].yaml  test_get_attributes[7].yaml  test_get_equipments[1].yaml  test_get_equipments[2].yaml  test_get_equipments[3].yaml  test_get_equipments[4].yaml  test_get_equipments[6].yaml  test_get_equipments[7].yaml  test_get_header[0].yaml  test_get_header[2].yaml  test_get_header[3].yaml  test_get_header[6].yaml  test_get_header[7].yaml  test_get_info_from_announcement_a.yaml  test_get_next_page_url[1-2].yaml  test_get_next_page_url[1000-1001].yaml
tests/unit/scraping/cassettes/yakeey/: test_get_attributes[0].yaml  test_get_attributes[1].yaml  test_get_attributes[2].yaml  test_get_attributes[3].yaml  test_get_attributes[4].yaml  test_get_equipments[0].yaml  test_get_equipments[1].yaml  test_get_equipments[2].yaml  test_get_equipments[3].yaml  test_get_equipments[4].yaml  test_get_header[0].yaml  test_get_header[1].yaml  test_get_header[2].yaml  test_get_header[3].yaml  test_get_header[4].yaml  test_get_info_from_announcement_a.yaml  test_get_next_page_url[1-2].yaml  test_get_next_page_url[15-16].yaml  test_get_next_page_url[2-3].yaml  (+3 more)
(+20 files in other folders)
